syntax = "proto3";

package washup.protos.app;

option java_package = "com.washup.protos";

message Prices {
  string abc = 1;
}

message SignUpRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string phone_number = 5;
}

message SignUpResponse {
  bool already_exists = 1;
  string failure_reason = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
}